# vigil-edr

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  NOTICE  Procfile  README.md  SECURITY.md  deny.toml  install.sh  rust-toolchain.toml
agent-core/: Cargo.toml  build.rs
agent-core/src/: client.rs  config.rs  enroll.rs  event.rs  identity.rs  integrity.rs  jobs.rs  jobs_acquire.rs  jobs_diagnostic.rs  jobs_handlers.rs  jobs_hunt.rs  jobs_runtime.rs  jobs_sweep.rs  lib.rs  scanner.rs  spool.rs  terminal.rs
agent-core/tests/: jobs_acquire_triage.rs
agent-linux/: Cargo.toml  build.rs
agent-linux/ebpf/: build.sh  edr.bpf.c  vigil.bpf.c
agent-linux/examples/: verifier_check.rs
agent-linux/src/: allowlist.rs  auditd.rs  command_worker.rs  container.rs  deception.rs  device_control.rs  dns_block.rs  ebpf.rs  lib.rs  main.rs  proc_watcher.rs  prom.rs  scanner_memory.rs  terminal.rs  tpm.rs
agent-linux/tests/: allowlist.rs  auditd.rs  container.rs  deception.rs  device_control.rs  dns_block.rs  scanner_memory.rs  tpm.rs
agent-windows/: Cargo.toml
agent-windows/src/: allowlist.rs  deception.rs  device_control.rs  driver.rs  driver_wire.rs  etw.rs  etw_auth.rs  main.rs  scanner_memory.rs  terminal.rs  tpm.rs
backend/: .coverage  .env.example  alembic.ini  coverage.xml  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260508_1700_initial.py  20260509_1706_m5_commands_table.py  20260510_0800_m7_5_host_groups.py  20260510_0900_m9_capabilities.py  20260510_1000_m16_audit_append_only.py  20260510_1100_m17_audit_token_fk.py  20260510_1200_m11b_anomaly_baseline.py  20260510_1300_m12f_audit_hmac_chain.py  20260510_1400_m20_rule_groups.py  20260510_1500_m20c_quarantined_files.py  20260510_1510_m20c_command_kind_release.py  20260511_1000_m23b_jobs_engine.py  20260511_1005_m23b_command_kind_run_job.py  20260511_1100_m23h_sweep_policy.py  20260511_1800_m16a_audit_ownership_split.py  20260512_1900_nullable_alert_host.py  20260512_2000_commands_notify_trigger.py  20260513_1130_incidents.py  20260513_1200_mitre_attck_fields.py  20260513_1300_alert_dedup.py  20260513_1430_intel_feeds.py  20260513_1500_sso_oidc.py  20260513_1613_rule_auto_memory_scan.py  20260513_1700_alert_routing.py  20260513_2000_allowlist.py  20260513_2000_dns_block.py  20260513_2000_process_chain.py  20260513_2000_saved_hunts.py  20260513_2000_sequence_rules.py  20260513_2010_incident_reason.py  20260513_2030_vulnerabilities.py  20260513_2100_triage_collect_job_kind.py  20260513_2200_multi_tenancy.py  20260513_2210_archive_jobs.py  20260513_2220_rollout_cohorts.py  20260513_2230_dashboards.py  20260513_2240_playbooks.py  20260513_2250_case_destinations.py  20260513_2260_webhook_subscriptions.py  20260513_2270_scim.py  (+9 more)
backend/app/: main.py
backend/app/api/: __init__.py  ai.py  alerts.py  allowlist.py  api_tokens.py  archive.py  attestation.py  audit.py  auth.py  case_destinations.py  cloud_sources.py  commands.py  dashboards.py  detonation.py  device_policies.py  dns_block.py  enrollment.py  honeytokens.py  host_groups.py  host_terminal.py  hosts.py  hunt.py  identity_sources.py  incidents.py  intel.py  jobs.py  me.py  mitre.py  notifications.py  playbooks.py  policies.py  process_chain.py  quarantine.py  rollouts.py  routing.py  rule_groups.py  rules.py  scim.py  scim_tokens.py  sequence_rules.py  (+6 more)
backend/app/core/: config.py  db.py  deps.py  errors.py  logging.py  metrics.py  metrics_middleware.py  rate_limit.py  redis_client.py  security.py
backend/app/grpc/: server.py  services.py
backend/app/models/: __init__.py  ai_summary.py  alert.py  allowlist.py  anomaly.py  api_token.py  archive.py  attestation.py  audit.py  base.py  ca.py  case_destination.py  cloud_source.py  command.py  dashboard.py  detonation.py  device_policy.py  dns_block.py  enrollment.py  honeytoken.py  host.py  host_group.py  identity_source.py  incident.py  intel_feed.py  job.py  notification_channel.py  playbook.py  policy.py  process_chain.py  quarantine.py  rollout_event.py  routing_rule.py  rule.py  saved_hunt.py  scim_token.py  sequence_rule.py  siem_destination.py  synthetic_rules.py  tenant.py  (+3 more)
backend/app/schemas/: ai_summary.py  alert.py  allowlist.py  api_token.py  archive.py  attestation.py  auth.py  case.py  cloud_source.py  command.py  common.py  dashboard.py  detonation.py  device_policy.py  dns_block.py  enrollment.py  honeytoken.py  host.py  host_group.py  hunt.py  identity_source.py  incident.py  intel.py  notification.py  playbook.py  policy.py  process_chain.py  rollout.py  routing.py  rule.py  scim.py  sequence_rule.py  stats.py  tenant.py  user.py  vulnerability.py  (+1 more)
backend/playbooks/: brute_force.yml  lsass_dump.yml  ransomware_indicator.yml
backend/scripts/: create_admin.py
backend/sequence_rules/: certutil_download.yml  mshta_launch_then_network.yml  office_spawns_powershell.yml  parent_explorer_cmd_rundll32.yml  process_injection.yml  schtasks_after_download.yml  unusual_powershell_parent.yml  wmic_lateral_movement.yml
backend/sigma_rules/: README.md
backend/tests/: conftest.py  test_ai_summary.py  test_alert_dedup.py  test_alert_routing.py  test_alert_tenant_routing.py  test_alerts_rbac.py  test_alerts_sort_stats.py  test_alerts_synthetic_host.py  test_allowlist.py  test_api_tokens_role_ttl.py  test_api_tokens_tenant_scope.py  test_archive.py  test_attestation.py  test_audit_hmac_fingerprint.py  test_audit_role_gates.py  test_audit_tenant_scope.py  test_audit_verify_cache.py  test_auth_event_ingest.py  test_ca_hostname_length.py  test_case_management.py  test_cloud_iam_anomaly.py  test_command_notify.py  test_container_enrichment.py  test_csr_min_key_size.py  test_dashboards.py  test_dashboards_tenant_scope.py  test_detonation.py  test_device_control.py  test_dispatch_watchdog.py  test_dns_allowlist_tenant_scope.py  test_dns_block.py  test_failed_login_audit.py  test_health.py  test_honeytoken.py  test_host_cache.py  test_host_groups_tenant_scope.py  test_hunt.py  test_hunt_scim_tenant_scope.py  test_identity_attack_rules_load.py  test_identity_detectors.py  (+44 more)
(+404 files in other folders)
