[workspace]
resolver = "2"
members = [
    "agent-core",
    "agent-windows",
    "agent-linux",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/isom21/vigil-edr"

[workspace.dependencies]
# async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# gRPC / proto
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# tls / crypto
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
sha2 = "0.10"
x509-parser = "0.16"
hex = "0.4"

# REST enrollment client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"

# detection
yara-x = "0.13"

# serialization / logging
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# storage / spool
sled = "0.34"

# misc
ulid = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
bytes = "1"

# M23.d: cross-platform system survey (process list, network sockets,
# memory pressure). sysinfo abstracts /proc on Linux + toolhelp on
# Windows so the handlers share one code path.
sysinfo = { version = "0.32", default-features = false, features = [
    "system",
    "network",
    "user",
    "disk",
] }

# Phase 2 #2.10: ZIP packing for triage_collect bundles. Default-
# features off to drop bzip2/xz/zstd we don't need; `deflate` alone
# keeps a Windows hive + browser sqlite at a sane size without
# pulling C-library deps.
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
