[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cross-platform core for the EDR agent: schema, gRPC client, rule cache, scanner traits."

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
sha2.workspace = true
x509-parser.workspace = true
yara-x.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sled.workspace = true
ulid.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true

[build-dependencies]
tonic-build.workspace = true
