[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cross-platform core for the Vigil agent: schema, gRPC client, rule cache, scanner traits."

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
sha2.workspace = true
x509-parser.workspace = true
hex.workspace = true
reqwest.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sled.workspace = true
ulid.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
# M16.g: PII / secret scrubbing on agent-emitted strings.
regex = "1"
# M23.d: cross-platform process/network/system survey for Job handlers.
sysinfo.workspace = true
# M23.f: yara_fs_scan Hunt handler. yara-x is the pure-Rust port of
# YARA used by the existing scanner crate plans.
yara-x.workspace = true
# Phase 2 #2.10: triage_collect packs forensic artifacts into a ZIP.
zip.workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build.workspace = true
# Bundles a protoc binary so contributors don't need it installed system-wide.
protoc-bin-vendored = "3"
