[package]
name = "agent-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EDR endpoint agent for Linux."

[[bin]]
name = "edr-agent"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
prost.workspace = true
ulid.workspace = true
rustls.workspace = true

# Linux-specific.
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
libc = "0.2"
nix = { version = "0.29", features = ["user", "hostname"] }
# eBPF lands in M6.
# aya = "0.13"
# aya-log = "0.2"
