[package]
name = "agent-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vigil endpoint agent for Linux."

[[bin]]
name = "vigil-agent"
path = "src/main.rs"

# Tiny re-export library so integration tests (`tests/scanner_memory.rs`)
# can drive the in-memory YARA reader against a child process. The bin
# stays the production entrypoint; the library is a test surface only.
[lib]
name = "agent_linux"
path = "src/lib.rs"

[dependencies]
agent-core = { path = "../agent-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
prost.workspace = true
ulid.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true

# Linux-specific.
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
libc = "0.2"
nix = { version = "0.29", features = ["user", "hostname", "signal"] }
# eBPF (M6). aya loads pre-compiled C eBPF objects (`agent-linux/ebpf/vigil.bpf.o`).
aya = "0.13"
aya-log = "0.2"
# M10.a file hashing on file_open events.
sha2 = "0.10"
# M12.c capability drop after init.
caps = "0.5"

[build-dependencies]
# Re-runs ebpf/build.sh when the eBPF source changes.
anyhow = "1"

# ---------------------------------------------------------------------------
# Debian package — `cargo deb -p agent-linux`. Drops a .deb under
# `target/debian/`. Targeted at Ubuntu 22.04+ / Debian 12+; older releases
# may need a rebuild against an older glibc.
# ---------------------------------------------------------------------------
[package.metadata.deb]
name = "vigil-agent"
maintainer = "isom21 <isom21@protonmail.com>"
copyright = "Copyright 2026 isom21"
license-file = ["../LICENSE", "0"]
extended-description = """\
Vigil endpoint agent for Linux. Captures process / file / network / module
events via eBPF (CO-RE) and ships them to the Vigil manager over mTLS gRPC.
BPF LSM self-protection is enabled by default."""
depends = "$auto, libc6 (>= 2.34)"
section = "admin"
priority = "optional"
assets = [
    ["target/release/vigil-agent", "/usr/bin/vigil-agent", "755"],
    ["../packaging/systemd/agent.env.example", "/usr/share/vigil/agent.env.example", "644"],
    ["../packaging/systemd/README.md", "/usr/share/doc/vigil-agent/README.md", "644"],
]
maintainer-scripts = "../packaging/debian/"
# cargo-deb finds packaging/debian/<unit-name>.service automatically and
# installs it under /lib/systemd/system/vigil-agent.service. enable=false /
# start=false keeps the service inactive on first install — the operator
# must edit /etc/vigil/agent.env and `systemctl enable --now vigil-agent`.
# `agent.env` itself is created by postinst from the bundled .example, so
# it doesn't appear in conffiles or assets.
systemd-units = { enable = false, start = false, unit-name = "vigil-agent" }

# ---------------------------------------------------------------------------
# RPM package — `cargo generate-rpm -p agent-linux`. Drops a .rpm under
# `target/generate-rpm/`. Targeted at RHEL/Rocky/Alma 9; older majors may
# need a rebuild against an older glibc.
# ---------------------------------------------------------------------------
[package.metadata.generate-rpm]
name = "vigil-agent"
license = "Apache-2.0"
summary = "Vigil endpoint agent (Linux)"
assets = [
    { source = "target/release/vigil-agent", dest = "/usr/bin/vigil-agent", mode = "755" },
    { source = "packaging/systemd/vigil-agent.service", dest = "/lib/systemd/system/vigil-agent.service", mode = "644", config = false },
    { source = "packaging/systemd/agent.env.example", dest = "/usr/share/vigil/agent.env.example", mode = "644" },
    { source = "packaging/systemd/README.md", dest = "/usr/share/doc/vigil-agent/README.md", mode = "644", doc = true },
]
auto-req = "no"
post_install_script = """\
systemctl daemon-reload || true
install -d -m 0700 /var/lib/vigil
install -d -m 0700 /var/lib/vigil/identity
install -d -m 0700 /var/lib/vigil/spool
install -d -m 0750 /etc/vigil
[ -e /etc/vigil/agent.env ] || install -m 0640 /usr/share/vigil/agent.env.example /etc/vigil/agent.env
echo
echo "  Vigil agent installed but NOT YET STARTED."
echo "  Edit /etc/vigil/agent.env (set VIGIL_MANAGER_ENDPOINT, VIGIL_ENROLLMENT_TOKEN), then:"
echo "    systemctl enable --now vigil-agent"
echo
"""
pre_uninstall_script = """\
if [ "$1" = "0" ]; then
    systemctl stop vigil-agent.service 2>/dev/null || true
    systemctl disable vigil-agent.service 2>/dev/null || true
    /usr/bin/vigil-agent --unpin 2>/dev/null || true
fi
"""
post_uninstall_script = """\
systemctl daemon-reload || true
"""

[package.metadata.generate-rpm.requires]
glibc = ">= 2.34"
