[package]
name = "agent-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EDR endpoint agent for Windows."

[[bin]]
name = "edr-agent"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
prost.workspace = true
ulid.workspace = true
rustls.workspace = true

# Windows-only dependencies.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Etw",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
ferrisetw = "1.2"
hostname = "0.4"
