[package]
name = "agent-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vigil endpoint agent for Windows."

[[bin]]
name = "vigil-agent"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
prost.workspace = true
ulid.workspace = true
rustls.workspace = true
# M23.c: agent_core::jobs_runtime returns serde_json values from the
# RunJob dispatch path; the Windows command worker parses the
# parameters_json envelope before handing off.
serde_json.workspace = true

# Windows-only dependencies.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    # Phase 4 #4.10: TBS (TPM Base Services) for the boot-state
    # attestation feature. Used by `tpm::read_pcrs` to call
    # `Tbsi_Get_TCG_Log` and the PCR-read IOCTL.
    "Win32_System_TpmBaseServices",
] }
ferrisetw = "1.2"
hostname = "0.4"
# M9.1: SCM service-control-handler integration. The agent registers as
# a real Windows service (replacing the M7.4 scheduled-task wrapper) so
# SCM auto-restart, dependency ordering, and crash-on-stop work the way
# operators expect.
windows-service = "0.7"
