[project]
name = "edr-backend"
version = "0.1.0"
description = "EDR manager: REST API, gRPC ingest, rules/alerts/host management."
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "cryptography>=44",
    "opensearch-py>=2.7",
    "aiokafka>=0.12",
    "grpcio>=1.68",
    "grpcio-tools>=1.68",
    "protobuf>=5.28",
    "pysigma>=0.11",
    "pysigma-backend-opensearch>=1.1",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-protobuf>=5.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
