[project]
name = "vigil-backend"
version = "0.1.0"
description = "Vigil manager: REST API, gRPC ingest, rules/alerts/host management."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "cryptography>=44",
    "opensearch-py>=2.7",
    "aiohttp>=3.10",
    "aiokafka>=0.12",
    "grpcio>=1.68",
    "grpcio-tools>=1.68",
    "protobuf>=5.28",
    "pysigma>=0.11",
    "pysigma-backend-opensearch>=1.1",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    # M22.b: GET /api/alerts/stream uses Server-Sent Events to push
    # newly-inserted alerts to connected clients without each
    # connection running its own DB poll loop.
    "sse-starlette>=2.1",
    # M23.a: MinIO S3 client for the Jobs artifact store. We use the
    # presigned-URL APIs so credentials never leave the manager process.
    "minio>=7.2",
    # Process supervisor used by `make up` to run all 9 backend workers
    # plus the frontend dev server under one parent (reads ./Procfile).
    "honcho>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyright>=1.1.390",
    "pip-audit>=2.7",
    "types-protobuf>=5.28",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic-generated migrations have long autogenerated FK lines we
# don't want to hand-wrap; proto_gen is generated protobuf code we
# treat as vendored. Both still get import-sorted by upstream tools
# (alembic env.py, protoc) when they're regenerated.
extend-exclude = [
    "alembic/versions/**",
    "app/proto_gen/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
# Stylistic rules we deliberately ignore:
#   UP042 - prefer enum.StrEnum over `str, enum.Enum` mixin. The mixin form
#           gives slightly different equality semantics that pysigma + the
#           SQLAlchemy enum wrapper depend on; switching is a breaking
#           change for consumers and not worth it for cosmetic gain.
#   UP047 - generic functions should use PEP 695 type parameters. Cosmetic;
#           our legacy TypeVar form works on every Python 3.12 we target.
ignore = [
    "UP042",  # prefer enum.StrEnum (mixin form is intentional, see above)
    "UP046",  # Generic class via Generic[] subclass is fine on 3.12
    "UP047",  # PEP 695 type params (cosmetic)
    "ASYNC240",  # we use sync pathlib in async fns deliberately for short ops
    "B905",   # zip(strict=...) noise where the iterables are statically same-len
    "SIM105", # try/except/pass is occasionally clearer than contextlib.suppress
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:grpc.*",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/proto_gen/*",
    "app/grpc/*_pb2*.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0  # ratchet up after the test corpus stabilises (M14 follow-up)

[tool.pyright]
include = ["app"]
exclude = ["app/proto_gen", "**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
